This is the HISTORY file for Expect.  Modifications made by Cygnus
support are in ChangeLog. - Don

Date	Version	Description
-------	-------	------------------------------------------------------
		Ashley Pittman <ashley@ilo.dec.com> noted that digital unix
		V5.0 prefers openpty (4000 ptys) over ptmx (60 ptys), so I'm
		reversing the login in pty_termios.c.  This also controls
		linux, but no linux hackers have weighed in on this subject			yet.

		Andrew Tannenbaum <trb@world.std.com> noted exp_internal
		command and "expect -exact" were broken.

6/29/99 5.31.0	See the NEWS file for this date for an overview.  (I'm
		too tired to add all the details.  Maybe later.)

		Fixed exp_clib so that it immediately reported failure of
		exec (in spawn) rather than passing it back through pipe.

		Removed error checking from ioctl(TIOCSCTTY) to pacify the
		variety of (but not all) Linux systems and a few others which
		define TIOCSCTTY but return an error although seem to work
		anyway.

		Added configure test for 0 vs 2-arg setpgrp.

		Kenji Kamizono <kenji@math.columbia.edu> noted it was possible
		to compile Linux (2.2.5) so that it recognized both openpty
		and ptmx leading to conflicts.  I arbitrarily chose ptmx.

4/1/99	5.30.0  Martin Forssen <maf@crt.se> provided fix to allow configure
		to start with LDFLAGS from environment.

		Paul Tazzyman <Paul.Tazzyman@one.at> noted that log_file didn't
		check for logging twice without turning off logging first.

		Ben <spy@calvin.iconoclasm.org> provided updated host for
		weather example.

		Jonathon Kamens noted that Expect didn't build properly if
		Tcl and/or Tk used build/install directories out of the usual
		hierarchy.  At the same time, I fixed a number of other related
		problems in Makefile/configure.

		Pierre Pomes <ppomes@it.marseille-innov.assoc.fr> provided fix
		to ftp-inband.  It blew up from an unprotected send that
		was handed a uuencoded line that started with a -.
